lab1/Test/L1-A-11-55.output
Error Type B at Line 10
Error Type B at Line 49
Error Type B at Line 98
Error Type B at Line 103
